--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -7,6 +7,8 @@
   --background-color-2: #202020;
   --background-color-3: #303030;
   --text-color: #fff;
+  --text-color-disabled: #6e6e6e;
+  --grey-color: #232323;
 }
 
 * {
@@ -54,8 +56,10 @@
   background-color: var(--primary-color-active);
 }
 
-.btn-secondary[disabled] {
+.btn-secondary[disabled],
+.btn-secondary[disabled] .button-text {
   cursor: default;
+  color: var(--text-color-disabled);
 }
 
 .btn-secondary[disabled]:hover {
@@ -97,4 +101,27 @@
   top: -2px;
   bottom: -2px;
   width: 100%;
+}
+
+.icon path {
+  fill: var(--text-color);
+}
+.icon.disabled path {
+  fill: var(--text-color-disabled);
+}
+
+.icon-lg {
+  height: 20px;
+  width: 20px;
+}
+.icon-md {
+  height: 15px;
+  width: 15px;
+}
+.icon-sm {
+  height: 10px;
+  width: 10px;
+}
+.rotate-icon {
+  transform: rotate(90deg);
 }
