--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -9,6 +9,15 @@
   --text-color: #fff;
   --text-color-disabled: #6e6e6e;
 }
+::-webkit-scrollbar {
+  height: 8px;
+  width: 8px;
+  background: var(--background-color-3);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--text-color-disabled);
+}
 
 * {
   margin: 0;
