--- a/src/assets/styles/split-pane.css
+++ b/src/assets/styles/split-pane.css
@@ -1,4 +1,4 @@
-/* Splitpane package styles */
+/* Splitpane package custom styles */
 .splitpanes {
   background-color: var(--background-color);
 }
