--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -78,3 +78,16 @@
 .spacer {
   width: 100%;
 }
+
+.animate-rotation {
+  animation: rotation 1s infinite linear;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
